Package_Tools/include-C/efl/fertig/eolian-1/fertig/Eolian.h


typedef struct _Eolian_State Eolian_State;
typedef struct _Eolian_Object Eolian_Object;
typedef struct _Eolian_Class Eolian_Class;
typedef struct _Eolian_Function Eolian_Function;
typedef struct _Eolian_Part Eolian_Part;
typedef struct _Eolian_Type Eolian_Type;
typedef struct _Eolian_Typedecl Eolian_Typedecl;
typedef struct _Eolian_Event Eolian_Event;
typedef struct _Eolian_Expression Eolian_Expression;
typedef struct _Eolian_Constant Eolian_Constant;
typedef struct _Eolian_Error Eolian_Error;
typedef struct _Eolian_Struct_Type_Field Eolian_Struct_Type_Field;
typedef struct _Eolian_Enum_Type_Field Eolian_Enum_Type_Field;
typedef struct _Eolian_Documentation Eolian_Documentation;
typedef enum
{
   EOLIAN_OBJECT_UNKNOWN = 0,
   EOLIAN_OBJECT_CLASS,
   EOLIAN_OBJECT_TYPEDECL,
   EOLIAN_OBJECT_STRUCT_FIELD,
   EOLIAN_OBJECT_ENUM_FIELD,
   EOLIAN_OBJECT_TYPE,
   EOLIAN_OBJECT_CONSTANT,
   EOLIAN_OBJECT_EXPRESSION,
   EOLIAN_OBJECT_FUNCTION,
   EOLIAN_OBJECT_FUNCTION_PARAMETER,
   EOLIAN_OBJECT_EVENT,
   EOLIAN_OBJECT_PART,
   EOLIAN_OBJECT_IMPLEMENT,
   EOLIAN_OBJECT_CONSTRUCTOR,
   EOLIAN_OBJECT_DOCUMENTATION,
   EOLIAN_OBJECT_ERROR
} Eolian_Object_Type;
typedef enum
{
   EOLIAN_SCOPE_UNKNOWN = 0,
   EOLIAN_SCOPE_PUBLIC,
   EOLIAN_SCOPE_PRIVATE,
   EOLIAN_SCOPE_PROTECTED
} Eolian_Object_Scope;
typedef enum
{
   EOLIAN_TYPEDECL_UNKNOWN = 0,
   EOLIAN_TYPEDECL_STRUCT,
   EOLIAN_TYPEDECL_STRUCT_OPAQUE,
   EOLIAN_TYPEDECL_ENUM,
   EOLIAN_TYPEDECL_ALIAS,
   EOLIAN_TYPEDECL_FUNCTION_POINTER
} Eolian_Typedecl_Type;
typedef enum
{
   EOLIAN_TYPE_UNKNOWN_TYPE = 0,
   EOLIAN_TYPE_VOID,
   EOLIAN_TYPE_REGULAR,
   EOLIAN_TYPE_CLASS,
   EOLIAN_TYPE_ERROR,
#ifdef EFL_BETA_API_SUPPORT
   EOLIAN_TYPE_UNDEFINED
#endif
} Eolian_Type_Type;
typedef enum
{
   EOLIAN_TYPE_BUILTIN_INVALID = 0,
   EOLIAN_TYPE_BUILTIN_BYTE,
   EOLIAN_TYPE_BUILTIN_UBYTE,
   EOLIAN_TYPE_BUILTIN_CHAR,
   EOLIAN_TYPE_BUILTIN_SHORT,
   EOLIAN_TYPE_BUILTIN_USHORT,
   EOLIAN_TYPE_BUILTIN_INT,
   EOLIAN_TYPE_BUILTIN_UINT,
   EOLIAN_TYPE_BUILTIN_LONG,
   EOLIAN_TYPE_BUILTIN_ULONG,
   EOLIAN_TYPE_BUILTIN_LLONG,
   EOLIAN_TYPE_BUILTIN_ULLONG,
   EOLIAN_TYPE_BUILTIN_INT8,
   EOLIAN_TYPE_BUILTIN_UINT8,
   EOLIAN_TYPE_BUILTIN_INT16,
   EOLIAN_TYPE_BUILTIN_UINT16,
   EOLIAN_TYPE_BUILTIN_INT32,
   EOLIAN_TYPE_BUILTIN_UINT32,
   EOLIAN_TYPE_BUILTIN_INT64,
   EOLIAN_TYPE_BUILTIN_UINT64,
   EOLIAN_TYPE_BUILTIN_INT128,
   EOLIAN_TYPE_BUILTIN_UINT128,
   EOLIAN_TYPE_BUILTIN_SIZE,
   EOLIAN_TYPE_BUILTIN_SSIZE,
   EOLIAN_TYPE_BUILTIN_INTPTR,
   EOLIAN_TYPE_BUILTIN_UINTPTR,
   EOLIAN_TYPE_BUILTIN_PTRDIFF,
   EOLIAN_TYPE_BUILTIN_TIME,
   EOLIAN_TYPE_BUILTIN_FLOAT,
   EOLIAN_TYPE_BUILTIN_DOUBLE,
   EOLIAN_TYPE_BUILTIN_BOOL,
   EOLIAN_TYPE_BUILTIN_SLICE,
   EOLIAN_TYPE_BUILTIN_RW_SLICE,
   EOLIAN_TYPE_BUILTIN_VOID,
   EOLIAN_TYPE_BUILTIN_ACCESSOR,
   EOLIAN_TYPE_BUILTIN_ARRAY,
   EOLIAN_TYPE_BUILTIN_FUTURE,
   EOLIAN_TYPE_BUILTIN_ITERATOR,
#ifdef EFL_BETA_API_SUPPORT
   EOLIAN_TYPE_BUILTIN_LIST,
#else
   EOLIAN_TYPE_BUILTIN_BETA_PLACEHOLDER1,
#endif
   EOLIAN_TYPE_BUILTIN_ANY_VALUE,
   EOLIAN_TYPE_BUILTIN_ANY_VALUE_REF,
   EOLIAN_TYPE_BUILTIN_BINBUF,
   EOLIAN_TYPE_BUILTIN_EVENT,
   EOLIAN_TYPE_BUILTIN_MSTRING,
   EOLIAN_TYPE_BUILTIN_STRING,
   EOLIAN_TYPE_BUILTIN_STRINGSHARE,
   EOLIAN_TYPE_BUILTIN_STRBUF,
#ifdef EFL_BETA_API_SUPPORT
   EOLIAN_TYPE_BUILTIN_HASH,
   EOLIAN_TYPE_BUILTIN_VOID_PTR
#endif
} Eolian_Type_Builtin_Type;
typedef enum
{
   EOLIAN_EXPR_UNKNOWN = 0,
   EOLIAN_EXPR_INT,
   EOLIAN_EXPR_UINT,
   EOLIAN_EXPR_LONG,
   EOLIAN_EXPR_ULONG,
   EOLIAN_EXPR_LLONG,
   EOLIAN_EXPR_ULLONG,
   EOLIAN_EXPR_FLOAT,
   EOLIAN_EXPR_DOUBLE,
   EOLIAN_EXPR_STRING,
   EOLIAN_EXPR_CHAR,
   EOLIAN_EXPR_NULL,
   EOLIAN_EXPR_BOOL,
   EOLIAN_EXPR_NAME,
   EOLIAN_EXPR_UNARY,
   EOLIAN_EXPR_BINARY
} Eolian_Expression_Type;
typedef enum
{
   EOLIAN_MASK_SINT   = 1 << 0,
   EOLIAN_MASK_UINT   = 1 << 1,
   EOLIAN_MASK_INT    = EOLIAN_MASK_SINT | EOLIAN_MASK_UINT,
   EOLIAN_MASK_FLOAT  = 1 << 2,
   EOLIAN_MASK_BOOL   = 1 << 3,
   EOLIAN_MASK_STRING = 1 << 4,
   EOLIAN_MASK_CHAR   = 1 << 5,
   EOLIAN_MASK_NULL   = 1 << 6,
   EOLIAN_MASK_SIGNED = EOLIAN_MASK_SINT   | EOLIAN_MASK_FLOAT,
   EOLIAN_MASK_NUMBER = EOLIAN_MASK_INT    | EOLIAN_MASK_FLOAT,
   EOLIAN_MASK_ALL    = EOLIAN_MASK_NUMBER | EOLIAN_MASK_BOOL
                      | EOLIAN_MASK_STRING | EOLIAN_MASK_CHAR
                      | EOLIAN_MASK_NULL
} Eolian_Expression_Mask;
typedef struct _Eolian_Value
{
   Eolian_Expression_Type type;
   Eolian_Value_Union value;
} Eolian_Value;
typedef enum
{
   EOLIAN_BINOP_INVALID = 0,
   EOLIAN_BINOP_ADD, 
   EOLIAN_BINOP_SUB, 
   EOLIAN_BINOP_MUL, 
   EOLIAN_BINOP_DIV, 
   EOLIAN_BINOP_MOD, 
   EOLIAN_BINOP_EQ, 
   EOLIAN_BINOP_NQ, 
   EOLIAN_BINOP_GT, 
   EOLIAN_BINOP_LT, 
   EOLIAN_BINOP_GE, 
   EOLIAN_BINOP_LE, 
   EOLIAN_BINOP_AND, 
   EOLIAN_BINOP_OR,  
   EOLIAN_BINOP_BAND, 
   EOLIAN_BINOP_BOR,  
   EOLIAN_BINOP_BXOR, 
   EOLIAN_BINOP_LSH,  
   EOLIAN_BINOP_RSH   
} Eolian_Binary_Operator;
typedef enum
{
   EOLIAN_UNOP_INVALID = 0,
   EOLIAN_UNOP_UNM, 
   EOLIAN_UNOP_UNP, 
   EOLIAN_UNOP_NOT,  
   EOLIAN_UNOP_BNOT, 
} Eolian_Unary_Operator;
typedef enum
{
   EOLIAN_DOC_TOKEN_UNKNOWN = 0,
   EOLIAN_DOC_TOKEN_TEXT,
   EOLIAN_DOC_TOKEN_REF,
   EOLIAN_DOC_TOKEN_MARK_NOTE,
   EOLIAN_DOC_TOKEN_MARK_WARNING,
   EOLIAN_DOC_TOKEN_MARK_REMARK,
   EOLIAN_DOC_TOKEN_MARK_TODO,
   EOLIAN_DOC_TOKEN_MARKUP_MONOSPACE
} Eolian_Doc_Token_Type;
typedef struct _Eolian_Doc_Token
{
   Eolian_Doc_Token_Type type;
   const char *text, *text_end;
} Eolian_Doc_Token;
extern Eina_Iterator *eolian_class_constructors_get(const Eolian_Class *klass);
extern Eina_Iterator *eolian_class_events_get(const Eolian_Class *klass);
extern const Eolian_Type *eolian_event_type_get(const Eolian_Event *event);
extern const Eolian_Class *eolian_event_class_get(const Eolian_Event *event);
extern const Eolian_Documentation *eolian_event_documentation_get(const Eolian_Event *event);
extern Eolian_Object_Scope eolian_event_scope_get(const Eolian_Event *event);
extern Eina_Bool eolian_event_is_hot(const Eolian_Event *event);
extern Eina_Bool eolian_event_is_restart(const Eolian_Event *event);
extern Eina_Iterator *eolian_class_parts_get(const Eolian_Class *klass);
extern Eina_Stringshare *eolian_event_c_macro_get(const Eolian_Event *event);
extern const Eolian_Class *eolian_part_class_get(const Eolian_Part *part);
extern const Eolian_Documentation *eolian_part_documentation_get(const Eolian_Part *part);
extern const Eolian_Event *eolian_class_event_by_name_get(const Eolian_Class *klass, const char *event_name);
extern Eina_Bool eolian_class_ctor_enable_get(const Eolian_Class *klass);
extern Eina_Bool eolian_class_dtor_enable_get(const Eolian_Class *klass);
extern Eina_Stringshare *eolian_class_c_get_function_name_get(const Eolian_Class *klass);
extern Eina_Stringshare *eolian_class_c_macro_get(const Eolian_Class *klass);
extern Eina_Stringshare *eolian_class_c_data_type_get(const Eolian_Class *klass);
extern Eolian_Typedecl_Type eolian_typedecl_type_get(const Eolian_Typedecl *tp);
extern Eina_Iterator *eolian_typedecl_struct_fields_get(const Eolian_Typedecl *tp);
extern const Eolian_Struct_Type_Field *eolian_typedecl_struct_field_get(const Eolian_Typedecl *tp, const char *field);
extern const Eolian_Documentation *eolian_typedecl_struct_field_documentation_get(const Eolian_Struct_Type_Field *fl);
extern const Eolian_Type *eolian_typedecl_struct_field_type_get(const Eolian_Struct_Type_Field *fl);
extern Eina_Bool eolian_typedecl_struct_field_is_by_ref(const Eolian_Struct_Type_Field *fl);
extern Eina_Bool eolian_typedecl_struct_field_is_move(const Eolian_Struct_Type_Field *fl);
extern Eina_Stringshare *eolian_typedecl_struct_field_c_type_get(const Eolian_Struct_Type_Field *fl);
extern Eina_Iterator *eolian_typedecl_enum_fields_get(const Eolian_Typedecl *tp);
extern const Eolian_Enum_Type_Field *eolian_typedecl_enum_field_get(const Eolian_Typedecl *tp, const char *field);
extern Eina_Stringshare *eolian_typedecl_enum_field_c_constant_get(const Eolian_Enum_Type_Field *fl);
extern const Eolian_Documentation *eolian_typedecl_enum_field_documentation_get(const Eolian_Enum_Type_Field *fl);
extern const Eolian_Expression *eolian_typedecl_enum_field_value_get(const Eolian_Enum_Type_Field *fl, Eina_Bool force);
extern const Eolian_Documentation *eolian_typedecl_documentation_get(const Eolian_Typedecl *tp);
extern const Eolian_Type *eolian_typedecl_base_type_get(const Eolian_Typedecl *tp);
extern const Eolian_Type *eolian_typedecl_aliased_base_get(const Eolian_Typedecl *tp);
extern Eina_Bool eolian_typedecl_is_extern(const Eolian_Typedecl *tp);
extern Eina_Stringshare *eolian_typedecl_c_type_get(const Eolian_Typedecl *tp);
extern const char *eolian_typedecl_free_func_get(const Eolian_Typedecl *tp);
extern const Eolian_Function *eolian_typedecl_function_pointer_get(const Eolian_Typedecl *tp);
extern Eolian_Type_Type eolian_type_type_get(const Eolian_Type *tp);
extern Eolian_Type_Builtin_Type eolian_type_builtin_type_get(const Eolian_Type *tp);
extern const Eolian_Type *eolian_type_base_type_get(const Eolian_Type *tp);
extern const Eolian_Type *eolian_type_next_type_get(const Eolian_Type *tp);
extern const Eolian_Typedecl *eolian_type_typedecl_get(const Eolian_Type *tp);
extern const Eolian_Type *eolian_type_aliased_base_get(const Eolian_Type *tp);
extern const Eolian_Class *eolian_type_class_get(const Eolian_Type *tp);
extern const Eolian_Error *eolian_type_error_get(const Eolian_Type *tp);
extern Eina_Bool eolian_type_is_move(const Eolian_Type *tp);
extern Eina_Bool eolian_type_is_const(const Eolian_Type *tp);
extern Eina_Stringshare *eolian_type_c_type_get(const Eolian_Type *tp);
extern Eolian_Value eolian_expression_eval(const Eolian_Expression *expr, Eolian_Expression_Mask m);
extern Eina_Bool eolian_expression_eval_fill(const Eolian_Expression *expr, Eolian_Expression_Mask m, Eolian_Value *val);
extern Eina_Stringshare *eolian_expression_value_to_literal(const Eolian_Value *v);
extern Eina_Stringshare *eolian_expression_serialize(const Eolian_Expression *expr);
extern Eolian_Expression_Type eolian_expression_type_get(const Eolian_Expression *expr);
extern Eolian_Binary_Operator eolian_expression_binary_operator_get(const Eolian_Expression *expr);
extern const Eolian_Expression *eolian_expression_binary_lhs_get(const Eolian_Expression *expr);
extern const Eolian_Expression *eolian_expression_binary_rhs_get(const Eolian_Expression *expr);
extern Eolian_Unary_Operator eolian_expression_unary_operator_get(const Eolian_Expression *expr);
extern const Eolian_Expression *eolian_expression_unary_expression_get(const Eolian_Expression *expr);
extern Eolian_Value eolian_expression_value_get(const Eolian_Expression *expr);
extern Eina_Bool eolian_expression_value_get_fill(const Eolian_Expression *expr, Eolian_Value *val);
extern const Eolian_Documentation *eolian_constant_documentation_get(const Eolian_Constant *var);
extern const Eolian_Type *eolian_constant_type_get(const Eolian_Constant *var);
extern const Eolian_Expression *eolian_constant_value_get(const Eolian_Constant *var);
extern Eina_Bool eolian_constant_is_extern(const Eolian_Constant *var);
extern const char *eolian_error_message_get(const Eolian_Error *err);
extern const Eolian_Documentation *eolian_error_documentation_get(const Eolian_Error *err);
extern Eina_Bool eolian_error_is_extern(const Eolian_Error *err);
extern const char *eolian_documentation_summary_get(const Eolian_Documentation *doc);
extern const char *eolian_documentation_description_get(const Eolian_Documentation *doc);
extern const char *eolian_documentation_since_get(const Eolian_Documentation *doc);
extern Eina_List *eolian_documentation_string_split(const char *doc);
extern const char *eolian_documentation_tokenize(const char *doc, Eolian_Doc_Token *ret);
extern void eolian_doc_token_init(Eolian_Doc_Token *tok);
extern Eolian_Doc_Token_Type eolian_doc_token_type_get(const Eolian_Doc_Token *tok);
extern char *eolian_doc_token_text_get(const Eolian_Doc_Token *tok);
extern Eolian_Object_Type eolian_doc_token_ref_resolve(const Eolian_Doc_Token *tok, const Eolian_State *state, const Eolian_Object **data, const Eolian_Object **data2);
extern const char *eolian_typedecl_enum_legacy_prefix_get(const Eolian_Typedecl *tp);
extern Eina_Bool eolian_type_is_ptr(const Eolian_Type *tp);