advancedpackages/efl/eolian-1/Eolian.inc

function eolian_class_constructors_get(klass: PEolian_Class): PEina_Iterator; cdecl; external libeolian;
function eolian_class_events_get(klass: PEolian_Class): PEina_Iterator; cdecl; external libeolian;
function eolian_event_type_get(event: PEolian_Event): PEolian_Type; cdecl; external libeolian;
function eolian_event_class_get(event: PEolian_Event): PEolian_Class; cdecl; external libeolian;
function eolian_event_documentation_get(event: PEolian_Event): PEolian_Documentation; cdecl; external libeolian;
function eolian_event_scope_get(event: PEolian_Event): TEolian_Object_Scope; cdecl; external libeolian;
function eolian_event_is_hot(event: PEolian_Event): TEina_Bool; cdecl; external libeolian;
function eolian_event_is_restart(event: PEolian_Event): TEina_Bool; cdecl; external libeolian;
function eolian_class_parts_get(klass: PEolian_Class): PEina_Iterator; cdecl; external libeolian;
function eolian_event_c_macro_get(event: PEolian_Event): PEina_Stringshare; cdecl; external libeolian;
function eolian_part_class_get(part: PEolian_Part): PEolian_Class; cdecl; external libeolian;
function eolian_part_documentation_get(part: PEolian_Part): PEolian_Documentation; cdecl; external libeolian;
function eolian_class_event_by_name_get(klass: PEolian_Class; event_name: pchar): PEolian_Event; cdecl; external libeolian;
function eolian_class_ctor_enable_get(klass: PEolian_Class): TEina_Bool; cdecl; external libeolian;
function eolian_class_dtor_enable_get(klass: PEolian_Class): TEina_Bool; cdecl; external libeolian;
function eolian_class_c_get_function_name_get(klass: PEolian_Class): PEina_Stringshare; cdecl; external libeolian;
function eolian_class_c_macro_get(klass: PEolian_Class): PEina_Stringshare; cdecl; external libeolian;
function eolian_class_c_data_type_get(klass: PEolian_Class): PEina_Stringshare; cdecl; external libeolian;
function eolian_typedecl_type_get(tp: PEolian_Typedecl): TEolian_Typedecl_Type; cdecl; external libeolian;
function eolian_typedecl_struct_fields_get(tp: PEolian_Typedecl): PEina_Iterator; cdecl; external libeolian;
function eolian_typedecl_struct_field_get(tp: PEolian_Typedecl; field: pchar): PEolian_Struct_Type_Field; cdecl; external libeolian;
function eolian_typedecl_struct_field_documentation_get(fl: PEolian_Struct_Type_Field): PEolian_Documentation; cdecl; external libeolian;
function eolian_typedecl_struct_field_type_get(fl: PEolian_Struct_Type_Field): PEolian_Type; cdecl; external libeolian;
function eolian_typedecl_struct_field_is_by_ref(fl: PEolian_Struct_Type_Field): TEina_Bool; cdecl; external libeolian;
function eolian_typedecl_struct_field_is_move(fl: PEolian_Struct_Type_Field): TEina_Bool; cdecl; external libeolian;
function eolian_typedecl_struct_field_c_type_get(fl: PEolian_Struct_Type_Field): PEina_Stringshare; cdecl; external libeolian;
function eolian_typedecl_enum_fields_get(tp: PEolian_Typedecl): PEina_Iterator; cdecl; external libeolian;
function eolian_typedecl_enum_field_get(tp: PEolian_Typedecl; field: pchar): PEolian_Enum_Type_Field; cdecl; external libeolian;
function eolian_typedecl_enum_field_c_constant_get(fl: PEolian_Enum_Type_Field): PEina_Stringshare; cdecl; external libeolian;
function eolian_typedecl_enum_field_documentation_get(fl: PEolian_Enum_Type_Field): PEolian_Documentation; cdecl; external libeolian;
function eolian_typedecl_enum_field_value_get(fl: PEolian_Enum_Type_Field; force: TEina_Bool): PEolian_Expression; cdecl; external libeolian;
function eolian_typedecl_documentation_get(tp: PEolian_Typedecl): PEolian_Documentation; cdecl; external libeolian;
function eolian_typedecl_base_type_get(tp: PEolian_Typedecl): PEolian_Type; cdecl; external libeolian;
function eolian_typedecl_aliased_base_get(tp: PEolian_Typedecl): PEolian_Type; cdecl; external libeolian;
function eolian_typedecl_is_extern(tp: PEolian_Typedecl): TEina_Bool; cdecl; external libeolian;
function eolian_typedecl_c_type_get(tp: PEolian_Typedecl): PEina_Stringshare; cdecl; external libeolian;
function eolian_typedecl_free_func_get(tp: PEolian_Typedecl): pchar; cdecl; external libeolian;
function eolian_typedecl_function_pointer_get(tp: PEolian_Typedecl): PEolian_Function; cdecl; external libeolian;
function eolian_type_type_get(tp: PEolian_Type): TEolian_Type_Type; cdecl; external libeolian;
function eolian_type_builtin_type_get(tp: PEolian_Type): TEolian_Type_Builtin_Type; cdecl; external libeolian;
function eolian_type_base_type_get(tp: PEolian_Type): PEolian_Type; cdecl; external libeolian;
function eolian_type_next_type_get(tp: PEolian_Type): PEolian_Type; cdecl; external libeolian;
function eolian_type_typedecl_get(tp: PEolian_Type): PEolian_Typedecl; cdecl; external libeolian;
function eolian_type_aliased_base_get(tp: PEolian_Type): PEolian_Type; cdecl; external libeolian;
function eolian_type_class_get(tp: PEolian_Type): PEolian_Class; cdecl; external libeolian;
function eolian_type_error_get(tp: PEolian_Type): PEolian_Error; cdecl; external libeolian;
function eolian_type_is_move(tp: PEolian_Type): TEina_Bool; cdecl; external libeolian;
function eolian_type_is_const(tp: PEolian_Type): TEina_Bool; cdecl; external libeolian;
function eolian_type_c_type_get(tp: PEolian_Type): PEina_Stringshare; cdecl; external libeolian;
function eolian_expression_eval(expr: PEolian_Expression; m: TEolian_Expression_Mask): TEolian_Value; cdecl; external libeolian;
function eolian_expression_eval_fill(expr: PEolian_Expression; m: TEolian_Expression_Mask; val: PEolian_Value): TEina_Bool; cdecl; external libeolian;
function eolian_expression_value_to_literal(v: PEolian_Value): PEina_Stringshare; cdecl; external libeolian;
function eolian_expression_serialize(expr: PEolian_Expression): PEina_Stringshare; cdecl; external libeolian;
function eolian_expression_type_get(expr: PEolian_Expression): TEolian_Expression_Type; cdecl; external libeolian;
function eolian_expression_binary_operator_get(expr: PEolian_Expression): TEolian_Binary_Operator; cdecl; external libeolian;
function eolian_expression_binary_lhs_get(expr: PEolian_Expression): PEolian_Expression; cdecl; external libeolian;
function eolian_expression_binary_rhs_get(expr: PEolian_Expression): PEolian_Expression; cdecl; external libeolian;
function eolian_expression_unary_operator_get(expr: PEolian_Expression): TEolian_Unary_Operator; cdecl; external libeolian;
function eolian_expression_unary_expression_get(expr: PEolian_Expression): PEolian_Expression; cdecl; external libeolian;
function eolian_expression_value_get(expr: PEolian_Expression): TEolian_Value; cdecl; external libeolian;
function eolian_expression_value_get_fill(expr: PEolian_Expression; val: PEolian_Value): TEina_Bool; cdecl; external libeolian;
function eolian_constant_documentation_get(var_: PEolian_Constant): PEolian_Documentation; cdecl; external libeolian;
function eolian_constant_type_get(var_: PEolian_Constant): PEolian_Type; cdecl; external libeolian;
function eolian_constant_value_get(var_: PEolian_Constant): PEolian_Expression; cdecl; external libeolian;
function eolian_constant_is_extern(var_: PEolian_Constant): TEina_Bool; cdecl; external libeolian;
function eolian_error_message_get(err: PEolian_Error): pchar; cdecl; external libeolian;
function eolian_error_documentation_get(err: PEolian_Error): PEolian_Documentation; cdecl; external libeolian;
function eolian_error_is_extern(err: PEolian_Error): TEina_Bool; cdecl; external libeolian;
function eolian_documentation_summary_get(doc: PEolian_Documentation): pchar; cdecl; external libeolian;
function eolian_documentation_description_get(doc: PEolian_Documentation): pchar; cdecl; external libeolian;
function eolian_documentation_since_get(doc: PEolian_Documentation): pchar; cdecl; external libeolian;
function eolian_documentation_string_split(doc: pchar): PEina_List; cdecl; external libeolian;
function eolian_documentation_tokenize(doc: pchar; ret: PEolian_Doc_Token): pchar; cdecl; external libeolian;
procedure eolian_doc_token_init(tok: PEolian_Doc_Token); cdecl; external libeolian;
function eolian_doc_token_type_get(tok: PEolian_Doc_Token): TEolian_Doc_Token_Type; cdecl; external libeolian;
function eolian_doc_token_text_get(tok: PEolian_Doc_Token): pchar; cdecl; external libeolian;
function eolian_doc_token_ref_resolve(tok: PEolian_Doc_Token; state: PEolian_State; data: PPEolian_Object; data2: PPEolian_Object): TEolian_Object_Type; cdecl; external libeolian;

{$ifdef EFL_BETA_API_SUPPORT}
function eolian_typedecl_enum_legacy_prefix_get(tp: PEolian_Typedecl): pchar; cdecl; external libeolian;
function eolian_type_is_ptr(tp: PEolian_Type): TEina_Bool; cdecl; external libeolian;
{$endif}

// === Konventiert am: 12-6-25 19:16:37 ===

// --- Static Inline Functions from Eolian.h ---

function eolian_state_object_by_name_get(state: PEolian_State; name: pchar): PEolian_Object;
function eolian_state_objects_get(state: PEolian_State): PEina_Iterator;
function eolian_state_class_by_name_get(state: PEolian_State; class_name: pchar): PEolian_Class;
function eolian_state_classes_get(state: PEolian_State): PEina_Iterator;
function eolian_state_constant_by_name_get(state: PEolian_State; name: pchar): PEolian_Constant;
function eolian_state_error_by_name_get(state: PEolian_State; name: pchar): PEolian_Error;
function eolian_state_constants_get(state: PEolian_State): PEina_Iterator;
function eolian_state_errors_get(state: PEolian_State): PEina_Iterator;
function eolian_state_alias_by_name_get(state: PEolian_State; name: pchar): PEolian_Typedecl;
function eolian_state_struct_by_name_get(state: PEolian_State; name: pchar): PEolian_Typedecl;
function eolian_state_enum_by_name_get(state: PEolian_State; name: pchar): PEolian_Typedecl;
function eolian_state_aliases_get(state: PEolian_State): PEina_Iterator;
function eolian_state_structs_get(state: PEolian_State): PEina_Iterator;
function eolian_state_enums_get(state: PEolian_State): PEina_Iterator;

function eolian_class_name_get(klass: PEolian_Class): pchar;
function eolian_class_c_name_get(klass: PEolian_Class): pchar;
function eolian_class_short_name_get(klass: PEolian_Class): pchar;
function eolian_class_namespaces_get(klass: PEolian_Class): PEina_Iterator;
function eolian_class_is_beta(klass: PEolian_Class): TEina_Bool;

function eolian_function_name_get(fid: PEolian_Function): pchar;
function eolian_function_is_beta(function_id: PEolian_Function): TEina_Bool;

function eolian_parameter_name_get(param: PEolian_Function_Parameter): pchar;

function eolian_implement_name_get(impl: PEolian_Implement): pchar;

function eolian_constructor_name_get(ctor: PEolian_Constructor): pchar;

function eolian_event_name_get(event: PEolian_Event): pchar;
function eolian_event_is_beta(event: PEolian_Event): TEina_Bool;

function eolian_part_name_get(part: PEolian_Part): pchar;
function eolian_part_is_beta(part: PEolian_Part): TEina_Bool;

function eolian_typedecl_struct_field_name_get(field: PEolian_Struct_Type_Field): pchar;
function eolian_typedecl_enum_field_name_get(field: PEolian_Enum_Type_Field): pchar;
function eolian_typedecl_is_beta(tp: PEolian_Typedecl): TEina_Bool;
function eolian_typedecl_name_get(tp: PEolian_Typedecl): pchar;
function eolian_typedecl_c_name_get(tp: PEolian_Typedecl): pchar;
function eolian_typedecl_short_name_get(tp: PEolian_Typedecl): pchar;
function eolian_typedecl_namespaces_get(tp: PEolian_Typedecl): PEina_Iterator;

function eolian_type_name_get(tp: PEolian_Type): pchar;
function eolian_type_c_name_get(tp: PEolian_Type): pchar;
function eolian_type_short_name_get(tp: PEolian_Type): pchar;
function eolian_type_namespaces_get(tp: PEolian_Type): PEina_Iterator;

function eolian_constant_name_get(tp: PEolian_Constant): pchar;
function eolian_constant_c_name_get(tp: PEolian_Constant): pchar;
function eolian_constant_short_name_get(tp: PEolian_Constant): pchar;
function eolian_constant_namespaces_get(tp: PEolian_Constant): PEina_Iterator;
function eolian_constant_is_beta(var_const: PEolian_Constant): TEina_Bool;
